--- a/tgui/packages/tgui-polyfill/package.json
+++ b/tgui/packages/tgui-polyfill/package.json
@@ -5,6 +5,6 @@
   "dependencies": {
     "core-js": "^3.9.1",
     "regenerator-runtime": "^0.13.8",
-    "whatwg-fetch": "^3.6.2"
+    "unfetch": "^4.2.0"
   }
 }
